# ai-rag-agent-bootcamp

./: .gitignore  README.md
course/: pyproject.toml
course/section1/: documentation_ass.ipynb  elastic_search.ipynb  env_test.ipynb  hybrid_search.ipynb  intro_to_rag.ipynb  rag_faiss_chroma_demo.py  youtube_project_with_chunk_types_example.ipynb
course/section2/: agentic_loop.ipynb  agentic_rag.ipynb  intro_to_pydanticai.ipynb  open_ai_agent_sdk.ipynb  pydantic_multiagent.ipynb  pydanticai_deep_research.ipynb
course/section3/: main.py  search_agent.py  search_tools.py
course/section3/notebook/: evidently_docs_test.ipynb  ground-truth.ipynb  ground_truth_evidently.csv
course/section3/tests/: test_agent.py  test_agent_judge.py  utils.py
course/week2_project/: project.ipynb
course/week3_project/: agent_main.py  tools.py  wikipagent.py
course/week3_project/notebooks/: project_exp.ipynb
course/week3_project/tests/: conftest.py  test_agent.py  test_agent_judge.py  utils.py
